--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="menu-contacts link" href="mailto:info@devstudio.com">
               <svg width="16" height="12" class="envelope">
                 <use
-                  href="./imagies/svg/sprite.svg#icon-envelope-hover"
+                  href="./images/svg/sprite.svg#icon-envelope-hover"
                 ></use></svg
               >info@devstudio.com
             </a>
@@ -50,7 +50,7 @@
           <li class="header-contacts-item">
             <a class="link menu-contacts" href="tel:+380961111111">
               <svg width="10" height="16" class="smartphone">
-                <use href="./imagies/svg/sprite.svg#icon-smartphone"></use>
+                <use href="./images/svg/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -58,7 +58,7 @@
         </ul>
         <button type="button" class="mobile-menu-open" data-menu-open>
           <svg class="mobile-menu-open__icon" width="40" height="40">
-            <use href="./imagies/svg/sprite.svg#burger-icon"></use>
+            <use href="./images/svg/sprite.svg#burger-icon"></use>
           </svg>
         </button>
       </div>
@@ -67,7 +67,7 @@
           <button class="mobile-menu__close-btn" data-menu-close>
             <svg class="mobile-menu__close-icon" width="40" height="40">
               <use
-                href="./imagies/svg/sprite.svg#icon-modal-close-button"
+                href="./images/svg/sprite.svg#icon-modal-close-button"
               ></use>
             </svg>
           </button>
