--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
             <a class="menu-contacts link" href="mailto:info@devstudio.com">
               <svg width="16" height="12" class="envelope">
                 <use
-                  href="./imagies/svg/sprite.svg#icon-envelope-hover"
+                  href="./images/svg/sprite.svg#icon-envelope-hover"
                 ></use></svg
               >info@devstudio.com
             </a>
@@ -51,16 +51,79 @@
           <li class="header-contacts-item">
             <a class="link menu-contacts" href="tel:+380961111111">
               <svg width="10" height="16" class="smartphone">
-                <use href="./imagies/svg/sprite.svg#icon-smartphone"></use></svg
+                <use href="./images/svg/sprite.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11
             </a>
           </li>
         </ul>
+        <button type="button" class="mobile-menu-open" data-menu-open>
+          <svg class="mobile-menu-open__icon" width="40" height="40">
+            <use href="./images/svg/sprite.svg#burger-icon"></use>
+          </svg>
+        </button>
+        <div class="mobile-menu" data-menu>
+          <div class="mobile-menu__container">
+            <button class="mobile-menu__close-btn" data-menu-close>
+              <svg class="mobile-menu__close-icon" width="40" height="40">
+                <use
+                  href="./images/svg/sprite.svg#icon-modal-close-button"
+                ></use>
+              </svg>
+            </button>
+            <nav class="mobile-menu__page-nav">
+              <div class="mobil-menu__content">
+                <ul class="list mobile-menu__menu">
+                  <li class="mobile-menu__menu-item">
+                    <a
+                      class="mobile-menu__menu-link link current"
+                      href="index.html"
+                      >Студия</a
+                    >
+                  </li>
+                  <li class="mobile-menu__menu-item">
+                    <a class="mobile-menu__menu-link link" href="portfolio.html"
+                      >Портфолио</a
+                    >
+                  </li>
+                  <li class="mobile-menu__menu-item">
+                    <a class="mobile-menu__menu-link link" href="">Контакты</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+            <div class="mobile-menu-contacts">
+              <ul class="list mobile-menu__header-contacts">
+                <li class="mobile-menu__header-contacts-item">
+                  <a
+                    class="link mobile-menu__menu-phone"
+                    href="tel:+380961111111"
+                  >
+                    +38 096 111 11 11</a
+                  >
+                </li>
+                <li class="mobile-menu__header-contacts-item">
+                  <a
+                    class="mobile-menu__menu-email link"
+                    href="mailto:info@devstudio.com"
+                  >
+                    info@devstudio.com
+                  </a>
+                </li>
+              </ul>
+              <ul class="list mobile-menu__socials">
+                <li class="mobile-menu__social-item">Instagram</li>
+                <li class="mobile-menu__social-item">Twitter</li>
+                <li class="mobile-menu__social-item">Facebook</li>
+                <li class="mobile-menu__social-item">LinkedIn</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
     <main>
+      <!-- PORTFOLIO -->
       <div class="container section">
-        <!-- PORTFOLIO -->
         <h1 class="visually-hidden" lang="en">Portfolio</h1>
         <ul class="portfolio-button-list list">
           <li class="portfolio-button-item">
@@ -92,11 +155,33 @@
           <li class="portfolio-card">
             <a href="" class="portfolio-card-link-wraper">
               <div class="portfolio-card-wraper">
-                <img
-                  src="./imagies/portfolio/img-11.jpeg"
-                  alt="Веб-сайт"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/img-1-desctop.jpg    1x,
+                      ./images/portfolio/img-1-desctop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-1-tablet.jpg    1x,
+                      ./images/portfolio/img-1-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-1-mobile.jpg    1x,
+                      ./images/portfolio/img-1-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio/img-1-mobile.jpg"
+                    alt="Веб-сайт"
+                  />
+                </picture>
                 <p class="overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -112,11 +197,30 @@
           <li class="portfolio-card">
             <a href="" class="portfolio-card-link-wraper">
               <div class="portfolio-card-wraper">
-                <img
-                  src="./imagies/portfolio/img-22.jpeg"
-                  alt="Дизайн"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/img-2-desctop.jpg    1x,
+                      ./images/portfolio/img-2-desctop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-2-tablet.jpg    1x,
+                      ./images/portfolio/img-2-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-2-mobile.jpg    1x,
+                      ./images/portfolio/img-2-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img src="./images/portfolio/img-2-mobile.jpg" alt="Дизайн" />
+                </picture>
                 <p class="overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -134,11 +238,33 @@
           <li class="portfolio-card">
             <a href="" class="portfolio-card-link-wraper"
               ><div class="portfolio-card-wraper">
-                <img
-                  src="./imagies/portfolio/img-33.jpeg"
-                  alt="Приложение"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/img-3-desctop.jpg    1x,
+                      ./images/portfolio/img-3-desctop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-3-tablet.jpg    1x,
+                      ./images/portfolio/img-3-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-3-mobile.jpg    1x,
+                      ./images/portfolio/img-3-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio/img-3-mobile.jpg"
+                    alt="Приложение"
+                  />
+                </picture>
                 <p class="overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -156,11 +282,33 @@
           <li class="portfolio-card">
             <a href="" class="portfolio-card-link-wraper">
               <div class="portfolio-card-wraper">
-                <img
-                  src="./imagies/portfolio/img-44.jpeg"
-                  alt="Маркетинг"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/img-4-desctop.jpg    1x,
+                      ./images/portfolio/img-4-desctop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-4-tablet.jpg    1x,
+                      ./images/portfolio/img-4-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-4-mobile.jpg    1x,
+                      ./images/portfolio/img-4-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio/img-4-mobile.jpg"
+                    alt="Маркетинг"
+                  />
+                </picture>
                 <p class="overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -178,11 +326,33 @@
           <li class="portfolio-card">
             <a href="" class="portfolio-card-link-wraper">
               <div class="portfolio-card-wraper">
-                <img
-                  src="./imagies/portfolio/img-55.jpeg"
-                  alt="Приложение"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/img-5-desctop.jpg    1x,
+                      ./images/portfolio/img-5-desctop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-5-tablet.jpg    1x,
+                      ./images/portfolio/img-5-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-5-mobile.jpg    1x,
+                      ./images/portfolio/img-5-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio/img-5-mobile.jpg"
+                    alt="Приложение"
+                  />
+                </picture>
                 <p class="overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -200,11 +370,33 @@
           <li class="portfolio-card">
             <a href="" class="portfolio-card-link-wraper">
               <div class="portfolio-card-wraper">
-                <img
-                  src="./imagies/portfolio/img-66.jpeg"
-                  alt="Веб-сайт"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/img-6-desctop.jpg    1x,
+                      ./images/portfolio/img-6-desctop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-6-tablet.jpg    1x,
+                      ./images/portfolio/img-6-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-6-mobile.jpg    1x,
+                      ./images/portfolio/img-6-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio/img-6-mobile.jpg"
+                    alt="Веб-сайт"
+                  />
+                </picture>
                 <p class="overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -222,11 +414,30 @@
           <li class="portfolio-card">
             <a href="" class="portfolio-card-link-wraper">
               <div class="portfolio-card-wraper">
-                <img
-                  src="./imagies/portfolio/img-77.jpeg"
-                  alt="Дизайн"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/img-7-desctop.jpg    1x,
+                      ./images/portfolio/img-7-desctop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-7-tablet.jpg    1x,
+                      ./images/portfolio/img-7-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-7-mobile.jpg    1x,
+                      ./images/portfolio/img-7-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img src="./images/portfolio/img-7-mobile.jpg" alt="Дизайн" />
+                </picture>
                 <p class="overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -244,11 +455,33 @@
           <li class="portfolio-card">
             <a href="" class="portfolio-card-link-wraper">
               <div class="portfolio-card-wraper">
-                <img
-                  src="./imagies/portfolio/img-88.jpeg"
-                  alt="Маркетинг"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/img-8-desctop.jpg    1x,
+                      ./images/portfolio/img-8-desctop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-8-tablet.jpg    1x,
+                      ./images/portfolio/img-8-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-8-mobile.jpg    1x,
+                      ./images/portfolio/img-8-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio/img-8-mobile.jpg"
+                    alt="Маркетинг"
+                  />
+                </picture>
                 <p class="overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -266,11 +499,33 @@
           <li class="portfolio-card">
             <a href="" class="portfolio-card-link-wraper">
               <div class="portfolio-card-wraper">
-                <img
-                  src="./imagies/portfolio/img-99.jpeg"
-                  alt="Приложение"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/img-9-desctop.jpg    1x,
+                      ./images/portfolio/img-9-desctop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-9-tablet.jpg    1x,
+                      ./images/portfolio/img-9-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/img-9-mobile.jpg    1x,
+                      ./images/portfolio/img-9-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio/img-9-mobile.jpg"
+                    alt="Приложение"
+                  />
+                </picture>
                 <p class="overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -322,28 +577,28 @@
             <li class="footer-social-list__icon">
               <a href="" class="footer-social-list__link">
                 <svg width="20" height="20" class="footer-social-icon__svg">
-                  <use href="./imagies/svg/sprite.svg#instagram"></use>
+                  <use href="./images/svg/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list__icon">
               <a href="" class="footer-social-list__link">
                 <svg width="20" height="20" class="footer-social-icon__svg">
-                  <use href="./imagies/svg/sprite.svg#twitter"></use>
+                  <use href="./images/svg/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list__icon">
               <a href="" class="footer-social-list__link">
                 <svg width="20" height="20" class="footer-social-icon__svg">
-                  <use href="./imagies/svg/sprite.svg#facebook"></use>
+                  <use href="./images/svg/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list__icon">
               <a href="" class="footer-social-list__link">
                 <svg width="20" height="20" class="footer-social-icon__svg">
-                  <use href="./imagies/svg/sprite.svg#linkedin"></use>
+                  <use href="./images/svg/sprite.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -366,12 +621,14 @@
                 height="24"
                 class="footer-form-submit-btn__icon"
               >
-                <use href="./imagies/svg/sprite.svg#icon-send"></use>
+                <use href="./images/svg/sprite.svg#icon-send"></use>
               </svg>
             </button>
           </form>
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
