--- a/portfolio.html
+++ b/portfolio.html
@@ -74,14 +74,14 @@
               <div class="mobil-menu__content">
                 <ul class="list mobile-menu__menu">
                   <li class="mobile-menu__menu-item">
-                    <a
-                      class="mobile-menu__menu-link link current"
-                      href="index.html"
+                    <a class="mobile-menu__menu-link link" href="index.html"
                       >Студия</a
                     >
                   </li>
                   <li class="mobile-menu__menu-item">
-                    <a class="mobile-menu__menu-link link" href="portfolio.html"
+                    <a
+                      class="mobile-menu__menu-link link current"
+                      href="portfolio.html"
                       >Портфолио</a
                     >
                   </li>
