--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
                   media="(max-width: 767px)"
                 />
                 <img
+                  width="100%"
                   src="./images/emplyee/img-1-mobile.jpg"
                   alt="Игорь Демьяненко"
                 />
@@ -332,6 +333,7 @@
                   media="(max-width: 767px)"
                 />
                 <img
+                  width="100%"
                   src="./images/emplyee/img-2-mobile.jpg"
                   alt="Ольга Репина"
                 />
@@ -411,6 +413,7 @@
                   media="(max-width: 767px)"
                 />
                 <img
+                  width="100%"
                   src="./images/emplyee/img-3-mobile.jpg"
                   alt="Николай Тарасов"
                 />
@@ -490,6 +493,7 @@
                   media="(max-width: 767px)"
                 />
                 <img
+                  width="100%"
                   src="./images/emplyee/img-4-mobile.jpg"
                   alt="Михаил Ермаков"
                 />
@@ -663,7 +667,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="footer-form-subscription">
           <p class="footer-form-subtitle">Подпишитесь на рассылку</p>
           <form class="footer-form">
             <label>
@@ -673,7 +677,7 @@
                 required
                 class="footer-form__subscribtion-email"
                 placeholder="E-mail"
-            /></label>
+            /></label class="footer-form-input">
             <button type="submit" class="footer-form__submit-btn">
               Подписаться<svg
                 width="24"
