--- a/index.html
+++ b/index.html
@@ -670,14 +670,14 @@
         <div class="footer-form-subscription">
           <p class="footer-form-subtitle">Подпишитесь на рассылку</p>
           <form class="footer-form">
-            <label>
+            <label class="footer-form-input">
               <input
                 name="user_subscribtion_email"
                 type="email"
                 required
                 class="footer-form__subscribtion-email"
                 placeholder="E-mail"
-            /></label class="footer-form-input">
+            /></label>
             <button type="submit" class="footer-form__submit-btn">
               Подписаться<svg
                 width="24"
