--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 srcset="./images/our-work/img-1-desctop@2x.jpg 2x"
                 src="./images/our-work/img-1-desctop.jpg"
                 alt="верстка"
-                width="370"
+                width="100%"
                 height="294"
               />
               <p class="our-work-overlay">Десктопные приложения</p>
@@ -206,7 +206,7 @@
                 srcset="./images/our-work/img-2-desctop@2x.jpg 2x"
                 src="./images/our-work/img-2-desctop.jpg"
                 alt="дизайн"
-                width="370"
+                width="100%"
                 height="294"
               />
               <p class="our-work-overlay">Мобильные приложения</p>
@@ -216,7 +216,7 @@
                 srcset="./images/our-work/img-3-desctop@2x.jpg 2x"
                 src="./images/our-work/img-3-desctop.jpg"
                 alt="внешнее оформление"
-                width="370"
+                width="100%"
                 height="294"
               />
               <p class="our-work-overlay">Дизайнерские решения</p>
